# first-c-game

./: CMakeLists.txt  README.md  compile-debug.bat  compile.bat  config.ini  run.bat
assets/shaders/: batch_quad.frag  batch_quad.vert  default.vert
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.c
src/engine/: engine.c  engine.h
src/engine/audio/: audio.h
src/engine/camera/: camera.c  camera.h
src/engine/components/aabb/: aabb.c  aabb.h
src/engine/components/damage/: damage.c  damage.h
src/engine/components/health/: health.c  health.h
src/engine/components/physics/: physics.c  physics.h
src/engine/components/sprite/: sprite.c  sprite.h
src/engine/components/triggers/: trigger.c  trigger.h
src/engine/config/: config.c  config.h
src/engine/entities/: entity.c  entity.h  entity_manager.c  entity_manager.h
src/engine/input/: input.c  input.h
src/engine/render/: render.c  render.h  render_internally.c  render_internally.h
src/engine/scenes/: scene.c  scene.h  scene_play.c
src/engine/utils/: types.h  util.h
src/engine/utils/io/: io.c  io.h
src/engine/utils/lists/: array_list.c  array_list.h
src/engine/utils/time/: time.c  time.h
